# pysde2json

./: .gitignore  README.md  argfmt.py  pysde.py  setup.cfg
