[metadata]
name = pysde2json
version = attr: __version__
author = colcrunch
author_email = colcrunch@fancypants.space
description = A python tool for converting the EVE static data export to json files.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/colcrunch/pysde2json
keywords = eve, eve online
license = GPLv2
project_urls =
    Bug Tracker = https://github.com/colcrunch/pysde2json/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = .
python_requires = >=3.10
install_requires = 
    requests

[options.entry_points]
console_scripts = 
    pysde = pysde:main